01-loki-stack-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: loki-stack
  name: loki-stack
spec:
  finalizers:
  - kubernetes
