00-grafana-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-grafana-loki
  namespace: loki-stack
  labels:
    app: grafana-loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-loki
  template:
    metadata:
      labels:
        app: grafana-loki
    spec:
      securityContext:
        runAsUser: 472
        fsGroup: 472      
      containers:
      - image: grafana/grafana
        name: web-httpd
        ports:
        - containerPort: 3000
          name: web-port
          protocol: TCP
#        resources:
#          requests:
#            memory: "32Mi"
#            cpu: "200m"
#          limits:
#            memory: "64Mi"
#            cpu: "250m"
#        volumeMounts:
#        - mountPath: "/var/lib/grafana"
#          name: pvc-vol-01
        volumeMounts:
        - name: grafana-vol
          mountPath: /var/lib/grafana
#      imagePullSecrets:
#      - name: pull-secret-name
      volumes:
      - name: grafana-vol
        persistentVolumeClaim:
          claimName: grafana-loki-pvc
#      volumes:
#      - name: host-path
#        hostPath:
#          path: /data/grafana-loki
#      nodeSelector:
#        kubernetes.io/hostname: ols-milky-k8slab-worker-01
#      nodeSelector:
#        grafana: worker-02      
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-loki
  namespace: loki-stack
spec:
  type: ClusterIP
  ports:
  - port: 3000
  selector:
    app: grafana-loki
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-loki
  namespace: loki-stack
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: certmanager-01
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # type of authentication
    #nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    #nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    #nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - grafana-loki.magicsoftware.dedyn.io
# if you use certmanager do not remove #
    secretName: grafana-loki
  rules:
  - host: grafana-loki.magicsoftware.dedyn.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-loki
            port:
              number: 3000
