00-loki-stack-all-in-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventrouter
  namespace: kube-system
  labels:
    app: eventrouter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventrouter
  template:
    metadata:
      labels:
        app: eventrouter
        tier: control-plane-addons
    spec:
      containers:
        - name: kube-eventrouter
          image: gcr.io/heptio-images/eventrouter:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: config-volume
            mountPath: /etc/eventrouter
      serviceAccount: eventrouter
      volumes:
        - name: config-volume
          configMap:
            name: eventrouter-cm
---
#########################################
#          NameSpace                    #
#########################################
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: loki-stack
  name: loki-stack
spec:
  finalizers:
  - kubernetes
---
#########################################
#          Service                      #
#########################################

apiVersion: v1
kind: Service
metadata:
  labels:
    app: loki
    release: loki
  name: loki
  namespace: loki-stack
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-metrics
    port: 3100
    protocol: TCP
    targetPort: http-metrics
  selector:
    app: loki
    release: loki
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: loki
    release: loki
    variant: headless
  name: loki-headless
  namespace: loki-stack
spec:
  clusterIP: None
  clusterIPs:
  - None
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-metrics
    port: 3100
    protocol: TCP
    targetPort: http-metrics
  selector:
    app: loki
    release: loki
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: loki
    release: loki
  name: loki-memberlist
  namespace: loki-stack
spec:
  clusterIP: None
  clusterIPs:
  - None
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 7946
    protocol: TCP
    targetPort: memberlist-port
  publishNotReadyAddresses: true
  selector:
    app: loki
    release: loki
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---

#########################################
#          Loki StateFullSet            #
#########################################

# loki statefullset

apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: loki
    release: loki
  name: loki
  namespace: loki-stack
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      app: loki
      release: loki
  serviceName: loki-headless
  template:
    metadata:
      annotations:
        prometheus.io/port: http-metrics
        prometheus.io/scrape: "true"
      labels:
        app: loki
        name: loki
        release: loki
    spec:
      affinity: {}
      containers:
      - args:
        - -config.file=/etc/loki/loki.yaml
        image: grafana/loki:2.6.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: http-metrics
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: loki
        ports:
        - containerPort: 3100
          name: http-metrics
          protocol: TCP
        - containerPort: 9095
          name: grpc
          protocol: TCP
        - containerPort: 7946
          name: memberlist-port
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: http-metrics
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        securityContext:
          readOnlyRootFilesystem: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        - mountPath: /etc/loki
          name: config
        - mountPath: /data
          name: storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
      serviceAccount: loki
      serviceAccountName: loki
      terminationGracePeriodSeconds: 4800
      volumes:
      - emptyDir: {}
        name: tmp
      - configMap:
          defaultMode: 420
          name: custom-loki-configmap
        name: config
      - name: storage
        persistentVolumeClaim:
          claimName: loki-pvc
  updateStrategy:
    type: RollingUpdate

---

#########################################
#       Promtail DaemonSet              #
#########################################


# Promtail Daemonset

apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: promtail
  name: loki-promtail
  namespace: loki-stack
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: loki
      app.kubernetes.io/name: promtail
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: loki
        app.kubernetes.io/name: promtail
    spec:
      containers:
      - args:
        - -config.file=/etc/promtail/promtail.yaml
        image: docker.io/grafana/promtail:2.8.3
        imagePullPolicy: IfNotPresent
        name: promtail
        ports:
        - containerPort: 3101
          name: http-metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /ready
            port: http-metrics
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/promtail
          name: config
        - mountPath: /run/promtail
          name: run
        - mountPath: /var/lib/docker/containers
          name: containers
          readOnly: true
        - mountPath: /var/log/pods
          name: pods
          readOnly: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsGroup: 0
        runAsUser: 0
      serviceAccount: loki-promtail
      serviceAccountName: loki-promtail
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Exists
      volumes:
      - configMap:
          defaultMode: 420
          name: custom-promtail-configmap
        name: config
      - hostPath:
          path: /run/promtail
          type: ""
        name: run
      - hostPath:
          path: /var/lib/docker/containers
          type: ""
        name: containers
      - hostPath:
          path: /var/log/pods
          type: ""
        name: pods
  updateStrategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate

---

#########################################
#         Grafana Dashboard             #
#########################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-grafana-loki
  namespace: loki-stack
  labels:
    app: grafana-loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-loki
  template:
    metadata:
      labels:
        app: grafana-loki
    spec:
      securityContext:
        runAsUser: 472
        fsGroup: 472
      containers:
      - image: grafana/grafana
        name: web-httpd
        ports:
        - containerPort: 3000
          name: web-port
          protocol: TCP
#        resources:
#          requests:
#            memory: "32Mi"
#            cpu: "200m"
#          limits:
#            memory: "64Mi"
#            cpu: "250m"
#        volumeMounts:
#        - mountPath: "/var/lib/grafana"
#          name: pvc-vol-01
        volumeMounts:
        - name: grafana-vol
          mountPath: /var/lib/grafana
#      imagePullSecrets:
#      - name: pull-secret-name
      volumes:
      - name: grafana-vol
        persistentVolumeClaim:
          claimName: grafana-loki-pvc
#      volumes:
#      - name: host-path
#        hostPath:
#          path: /data/grafana-loki
#      nodeSelector:
#        kubernetes.io/hostname: ols-milky-k8slab-worker-01
#      nodeSelector:
#        grafana: worker-02
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-loki
  namespace: loki-stack
spec:
  type: ClusterIP
  ports:
  - port: 3000
  selector:
    app: grafana-loki
---

#########################################
#       Grafana Dashboard ingress       #
#########################################

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-loki
  namespace: loki-stack
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    #cert-manager.io/cluster-issuer: certmanager-01
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # type of authentication
    #nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    #nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    #nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
spec:
  ingressClassName: nginx
#  tls:
#  - hosts:
#      - grafana-loki.magicsoftware.dedyn.io
# if you use certmanager do not remove #
#    secretName: grafana-loki
  rules:
  - host: grafana-loki.magicsoftware.dedyn.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-loki
            port:
              number: 3000
---
